--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.4",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "pg-promise": "^11.5.4"
   }
 }
