--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
   "name": "rinha-backend-nodejs-2024-q1",
   "version": "1.0.0",
-  "description": "",
+  "description": "aplicacao nodejs simples gerada para ser usada no rinha backend",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.4",
-    "pg": "^8.11.3",
     "pg-promise": "^11.5.4"
   }
 }
