--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     container_name: mydb
     image: postgres:latest
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_USER=rinha
+      - POSTGRES_PASSWORD=rinha
     restart: unless-stopped      
     ports:
       - "5432:5432"
@@ -22,8 +22,9 @@ services:
           memory: "300MB"      
 
   api01: &api
-      build:
-          context: .
+      image: danilosoftwares/rinha-backedn-nodejs-2024-q1:latest   
+      # build:
+      #     context: .
       restart: unless-stopped    
       ulimits:
         nproc: 1000000
@@ -31,9 +32,9 @@ services:
           soft: 1000000
           hard: 1000000            
       environment:
-          POSTGRES_USER: ${POSTGRES_USER}
-          POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-          POSTGRES_DATABASE: ${POSTGRES_DATABASE}            
+          POSTGRES_USER: rinha
+          POSTGRES_PASSWORD: rinha
+          POSTGRES_DATABASE: rinha     
           POSTGRES_HOST: mydb   
           DIRECTORY_SCRIPT: script.sql     
       links:
