fix: chenged to express framework

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-POSTGRES_USER=manoel
-POSTGRES_PASSWORD=caribe
+POSTGRES_USER=rinha
+POSTGRES_PASSWORD=rinha
 POSTGRES_HOST=localhost
-POSTGRES_DATABASE=postgres
+POSTGRES_DATABASE=rinha
 DIRECTORY_SCRIPT=script.sql     
